--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ face-recognition==1.3.0
 face-recognition-models==0.3.0
 Flask==3.0.2
 flask-restx==1.3.0
+gunicorn==20.1.0
+dlib==19.24.2
 importlib_metadata==7.1.0
 importlib_resources==6.4.0
 itsdangerous==2.1.2
@@ -14,11 +16,10 @@ Jinja2==3.1.3
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 MarkupSafe==2.1.5
-numpy==1.24.4
+numpy==1.26.4
 pillow==10.2.0
 pytz==2024.1
 referencing==0.34.0
 rpds-py==0.18.0
 Werkzeug==3.0.1
 zipp==3.18.1
-gunicorn==20.1.0
